@startuml ClassDiagram
title Diagramme de Classes - Système de Réservation de Salles



class User {
        -id: UUID
        -email: String
        -firstName: String
        -lastName: String
        -role: Role <enum>
        -createdAt: DateTime
        +getRoles()
        +getUserIdentifier(): String
    }
    
    enum Role {
        <<enumeration>>
        USER
        ADMIN
}
    
    
    class Room {
        -id: UUID
        -name: String
        -capacity: int
        -floor: Floor
        -equipments: List~Equipment~
        -roomStatus: RoomStatus
        +canAccommodate(capacity): boolean
        +hasEquipment(equipment): boolean
    }
    
    class Building {
        -id: UUID
        -buildingName: String
        -section: String
        -coordinates: GeoPoint
        +getFullAddress(): String
    }

    class Floor {
        -id: UUID
        -floorNumber: int
        -building: Building
        -description: String
        +getFloorInfo(): String
    }
    
    class Equipment {
        -id: UUID
        -name: String
        -type: EquipmentType
        -quantity: int
        +isAvailable(): boolean
    }
    
    enum EquipmentType {
        <<enumeration>>
        PROJECTOR
        WHITEBOARD
        VIDEO_CONFERENCE
        COMPUTER
        AUDIO_SYSTEM
    }
    
    class Booking {
        -id: UUID
        -room: Room
        -user: User
        -startTime: DateTime
        -endTime: DateTime
        -purpose: String
        -status: BookingStatus
        -resources: List~Resource~
        -createdAt: DateTime
        -updatedAt: DateTime
        +isValid(): boolean
        +cancel()
        +modify(newStart, newEnd)
        
    }
    
    enum BookingStatus {
        <<enumeration>>
        PENDING
        CONFIRMED
        CANCELLED
        COMPLETED
    }
    
    enum RoomStatus {
        <<enumeration>>
        AVAILABLE
        MAINTENANCE
        RESERVED
        OUT_OF_SERVICE
    }
    
    class Resource {
        -id: UUID
        -name: String
        -type: ResourceType
        -available: boolean
        +allocate()
        +release()
    }
    
    enum ResourceType {
        <<enumeration>>
        AUDIOVISUAL
        CATERING
        PARKING
        FURNITURE
    }
    
    class Notification {
        -id: UUID
        -recipient: User
        -type: NotificationType
        -message: String
        -sentAt: DateTime
        -notificationStatus: NotificationType
        +send()
    }
    
    enum NotificationStatus {
        <<enumeration>>
        CONFIRMATION
        REMINDER
        CANCELLATION
        MODIFICATION
    }
    
    class Report {
        -id: UUID
        -title: String
        -period: DateRange
        -generatedBy: User
        -data: ReportData
        +getData(ReportData)
        
    }
    
    User "1" --> "1" Role 
  Room "*" --> "1" Floor
Floor "*" --> "1" Building
    Room "1" o-- "*" Equipment
    Room "1" ..> "1" RoomStatus
    Equipment "1" ..> "1" EquipmentType
    Booking "*" --> "1" Room
    Booking "*" --> "1" User
    Booking "1" ..> "1" BookingStatus
    Booking "*" --> "*" Resource
    Resource "1" ..> "1" ResourceType
    Notification "*" --> "1" User
    Notification "1" ..> "1" NotificationType
    Report "*" --> "1" User

@enduml